Fix layout bug on mobile

--- a/assets/less/lesson.less
+++ b/assets/less/lesson.less
@@ -310,5 +310,13 @@
         p {
             padding-bottom: 0.5em;
         }
+
+        .lesson-tab-label {
+            min-width: 9em;
+        }
+
+        .lesson-tab-label:first-of-type {
+            margin-left: -2em;
+        }
     }
 }
